--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,9 +29,9 @@ post_class: post-template
 <!--         <header class="post-header">
             <a id="blog-logo" href="{{site.url}}">
                 {% if site.logo %}
-                    <img src="{{site.logo}}" alt="{{ site.name }}" />
+                    <img src="{{site.logo}}" alt="{{ site.title }}" />
                 {% else %}
-                    <span class="blog-title">{{ site.name }}</span>
+                    <span class="blog-title">{{ site.title }}</span>
                 {%endif%}
             </a>
         </header> -->
@@ -64,7 +64,7 @@ post_class: post-template
             <!-- If we want to display author's name and bio -->
             {% if site.author %}
                 <figure class="author-image">
-                    <a class="img" href="{{ site.baseurl }}" style="background-image: url(/assets/images/profile.png)">
+                    <a class="img" href="{{ site.baseurl }}" style="background-image: url(https://gravatar.com/avatar/{{ site.gravatar }}.jpeg)">
                     <span class="hidden">{{site.author}}'s Picture</span></a>
                 </figure>
                 <section class="author">
