--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,49 +1,44 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <meta name="HandheldFriendly" content="True" />
-    <meta name="MobileOptimized" content="320" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="HandheldFriendly" content="True" />
+  <meta name="MobileOptimized" content="320" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" type="text/css" href="/assets/css/screen.css" />
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
-    <!-- Customisation  -->
-    <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
-    {% seo %}
+  <link rel="stylesheet" type="text/css" href="/assets/css/screen.css" />
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
+  <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
+  {% seo %}
 </head>
+
 <body class="{% if page.post_class %}{{page.post_class}}{% else %}home-template{% endif %}">
+  <header class="main-header post-head no-cover">
+    <nav class="main-nav clearfix">
+      {% if page.main %}
+      <a class="back-button" href="{{ site.baseurl }}">{{ site.title }}</a>
+      {% else %}
+        <a class="back-button icon-arrow-left" href="{{ site.baseurl }}">Home</a>
+      {% endif %}
+      <a class="subscribe-button icon-feed" href="{{ site.baseurl }}feed.xml">Subscribe</a>
+    </nav>
+  </header>
 
-    {{ content }}
-    <footer class="site-footer clearfix">
-      <section class="copyright">
-        <a href="{{ site.baseurl }}">{{ site.title }}</a> &copy;
-              {{"now" | date: "%Y"}} &bull; All rights reserved.
-      </section>
-      <section class="poweredby">Made with Jekyll using
-        <a href="http://github.com/rosario/kasper">Kasper theme</a>
-      </section>
-    </footer>
+  {{ content }}
 
-    <script type="text/javascript" src="/assets/js/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="/assets/js/jquery.fitvids.js"></script>
-    <script type="text/javascript" src="/assets/js/index.js"></script>
+  <footer class="site-footer clearfix">
+    <section class="copyright">
+      <a href="{{ site.baseurl }}">{{ site.title }}</a> &copy; {{"now" | date: "%Y"}} &bull; All rights reserved.
+    </section>
+    <section class="poweredby">
+      Made with Jekyll using <a href="http://github.com/rosario/kasper">Kasper theme</a>
+    </section>
+  </footer>
 
-    <!-- Google Analytics Tracking code -->
-    <script type="text/javascript">
-
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', '{{ site.google_analytics }}']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-
-    </script>
+  {% include google_analytics.html %}
 </body>
+
 </html>
