--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   {% seo %}
 </head>
 
-<body class="{% if page.post_class %}{{page.post_class}}{% else %}home-template{% endif %}">
+<body>
   <header class="main-header post-head no-cover">
     <nav class="main-nav clearfix">
       {% if page.main %}
