--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ post_class: post-template
 
     <footer class="post-footer">
       <figure class="author-image">
-        <a class="img" href="{{ site.baseurl }}" style="background-image: url({{ site.author.picture }})">
+        <a class="img" href="{{ "/" | relative_url }}" style="background-image: url({{ site.author.picture }})">
           <span class="hidden">{{site.author.name}}'s Picture</span>
         </a>
       </figure>
