--- a/_sass/_override.scss
+++ b/_sass/_override.scss
@@ -41,6 +41,8 @@ h1, h2, h3, .post-content p, code, .post-footer, .post-excerpt, .post-meta, ul {
   max-width: 600px;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 code {
