--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,4 +1,4 @@
-{% if page.comments %}
+{% unless page.disable_comments %}
 
 <section class="disqus">
   <div id="disqus_thread"></div>
@@ -19,4 +19,4 @@
   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 </section>
 
-{% endif %}
+{% endunless %}
