--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -4,8 +4,8 @@
   <div id="disqus_thread"></div>
   <script>
       var disqus_config = function () {
-          this.page.url = '{{ site.url }}{{ page.url }}';
-          this.page.identifier = '{{ site.url }}{{ page.url }}';
+          this.page.url = '{{ site.domain_name }}{{ page.url }}';
+          this.page.identifier = '{{ page.id }}';
       };
       (function() {  // DON'T EDIT BELOW THIS LINE
           var d = document, s = d.createElement('script');
