--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -5,7 +5,7 @@
   <script>
       var disqus_config = function () {
           this.page.url = '{{ site.domain_name }}{{ page.url }}';
-          this.page.identifier = '{{ page.id }}';
+          this.page.identifier = '{{ page.id | split: '/' | last }}';
       };
       (function() {  // DON'T EDIT BELOW THIS LINE
           var d = document, s = d.createElement('script');
