--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -4,7 +4,7 @@
   <div id="disqus_thread"></div>
   <script>
       var disqus_config = function () {
-          this.page.url = '{{ site.domain_name }}{{ page.url }}';
+          this.page.url = '{{ page.url | absolute_url }}';
           this.page.identifier = '{{ page.id | split: '/' | last }}';
       };
       (function() {  // DON'T EDIT BELOW THIS LINE
