--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,18 +1,18 @@
 <section class="share">
   <h4>Share this post</h4>
-  <a href="https://twitter.com/share?text={{page.title}}&amp;url={{site.domain_name}}{{ page.url }}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
+  <a href="https://twitter.com/share?text={{ page.title }}&amp;url={{ page.url | absolute_url }}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
     <i class="fab fa-twitter"></i>
     <span class="hidden">Twitter</span>
   </a>
-  <a href="https://www.facebook.com/sharer/sharer.php?u={{site.domain_name}}{{page.url}}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
+  <a href="https://www.facebook.com/sharer/sharer.php?u={{ page.url | absolute_url }}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
     <i class="fab fa-facebook"></i>
     <span class="hidden">Facebook</span>
   </a>
-  <a href="https://www.reddit.com/submit?url={{site.domain_name}}{{page.url}}&title={{page.title}}" target="_blank">
+  <a href="https://www.reddit.com/submit?url={{ page.url | absolute_url }}&title={{ page.title }}" target="_blank">
     <i class="fab fa-reddit"></i>
     <span class="hidden">Reddit</span>
   </a>
-  <a href="https://plus.google.com/share?url={{site.domain_name}}{{page.url}}" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
+  <a href="https://plus.google.com/share?url={{ page.url | absolute_url }}" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
     <i class="fab fa-google-plus-g"></i>
     <span class="hidden">Google+</span>
   </a>
