--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -1,4 +1,4 @@
-{% if site.google_analytics %}
+{% if jekyll.environment == 'production' and site.google_analytics %}
 
 <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
 <script>
